Colaboratory を使用して作成しました

--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyO7YAyRUHqZl+WAA0tVhhXt",
+      "authorship_tag": "ABX9TyN0Oky6gSTxEamZJbupb+dF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -510,7 +509,7 @@
         "int main (){\n",
         "    int x;\n",
         "    std::vector<int> v;\n",
-        "    while (std::cin >> x) {\n",
+        "    while (std::cin >> x){\n",
         "        v.push_back(x);\n",
         "    }\n",
         "\n",
@@ -806,10 +805,10 @@
         "\n",
         "int main(){\n",
         "    int a, b;\n",
-        "    while (true) {\n",
+        "    while (1){\n",
         "        std::cin >> a >> b;\n",
         "        if (a == 0 && b == 0) break;\n",
-        "        if (a < b) {\n",
+        "        if (a < b){\n",
         "            std::cout << a << \" \" << b << \"\\n\";\n",
         "        } else {\n",
         "            std::cout << b << \" \" << a << \"\\n\";\n",
@@ -1095,7 +1094,7 @@
         "    int a, b;\n",
         "    char op;\n",
         "\n",
-        "    while (true) {\n",
+        "    while (1){\n",
         "        std::cin >> a >> op >> b;\n",
         "        if (op == '?') break;\n",
         "        if (op == '+') std::cout << a + b << \"\\n\";\n",
@@ -1279,7 +1278,7 @@
         "#include <iostream>\n",
         "int main(){\n",
         "    int H, W;\n",
-        "    while (true){\n",
+        "    while (1){\n",
         "        std::cin >> H >> W;\n",
         "        if (H==0 && W==0) break;\n",
         "        for (int i=0; i<H; i++){\n",
@@ -1398,7 +1397,7 @@
         "#include <iostream>\n",
         "int main(){\n",
         "    int H, W;\n",
-        "    while (true){\n",
+        "    while (1){\n",
         "        std::cin >> H >> W;\n",
         "        if (H==0 && W==0) break;\n",
         "        for (int i=0; i<H; i++){\n",
@@ -1523,7 +1522,7 @@
         "#include <iostream>\n",
         "int main(){\n",
         "    int H, W;\n",
-        "    while (true){\n",
+        "    while (1){\n",
         "        std::cin >> H >> W;\n",
         "        if (H==0 && W==0) break;\n",
         "        for (int i=0; i<H; i++){\n",
@@ -1619,7 +1618,7 @@
         "#include <iostream>\n",
         "\n",
         "bool has3(int x){\n",
-        "    while (x) {\n",
+        "    while (x){\n",
         "        if (x % 10 == 3) return true;\n",
         "        x /= 10;\n",
         "    }\n",
@@ -1786,7 +1785,7 @@
         "\n",
         "    std::cin >> n;\n",
         "\n",
-        "    for (int i = 0; i < n; i++) {\n",
+        "    for (int i = 0; i < n; i++){\n",
         "        std::cin >> suit >> rank;\n",
         "        if (suit == 'S') cards[0][rank] = 1;\n",
         "        if (suit == 'H') cards[1][rank] = 1;\n",
@@ -1796,7 +1795,7 @@
         "\n",
         "    for (int s = 0; s < 4; s++){\n",
         "        for (int r = 1; r < 14; r++){\n",
-        "            if (!(cards[s][r])) {\n",
+        "            if (!(cards[s][r])){\n",
         "            if (s == 0) suit = 'S';\n",
         "            if (s == 1) suit = 'H';\n",
         "            if (s == 2) suit = 'C';\n",
@@ -1807,7 +1806,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1830,7 +1829,7 @@
       "source": [
         "!g++ findmissingcard.cpp -o findmissingcard; echo  47 S 10 S 11 S 12 S 13 H 1 H 2 S 6 S 7 S 8 S 9 H 6 H 8 H 9 H 10 H 11 H 4 H 5 S 2 S 3 S 4 S 5 H 12 H 13 C 1 C 2 D 1 D 2 D 3 D 4 D 5 D 6 D 7 C 3 C 4 C 5 C 6 C 7 C 8 C 9 C 10 C 11 C 13 D 9 D 10 D 11 D 12 D 13 |./findmissingcard"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1888,7 +1887,7 @@
         " 0 0 0 0 0 0 0 0 0 0<br>\n",
         " 0 0 0 0 0 0 0 1 0 0</span>"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1956,7 +1955,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1979,7 +1978,7 @@
       "source": [
         "!g++ officialhouse.cpp -o officialhouse; echo 3 1 1 3 8 3 2 2 7 4 3 8 1 |./officialhouse"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2023,10 +2022,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "BRZMtp2d39jV",
-        "outputId": "bf702dc8-ab41-458a-f583-1a3e8db0185e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bf702dc8-ab41-458a-f583-1a3e8db0185e"
       },
       "source": [
         "%%writefile matrixvectormultiplication.cpp\n",
@@ -2041,7 +2040,7 @@
         "\n",
         "    for (int i=0; i<n; i++){\n",
         "        c[i] = 0;\n",
-        "        for (int j=0; j<m; j++) {\n",
+        "        for (int j=0; j<m; j++){\n",
         "            c[i] += A[i][j]*b[j];\n",
         "        }\n",
         "    }\n",
@@ -2050,7 +2049,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2065,15 +2064,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Zfr-O0KG3-Bb",
-        "outputId": "e7972665-0643-4732-d0aa-919b0a94be5b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e7972665-0643-4732-d0aa-919b0a94be5b"
       },
       "source": [
         "!g++ matrixvectormultiplication.cpp -o matrixvectormultiplication; echo 3 4 1 2 0 1 0 3 0 1 4 1 1 0 1 2 3 0 |./matrixvectormultiplication"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2106,6 +2105,50 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bsl-1ynNxq1Y"
+      },
+      "source": [
+        "// %%writefile grading.cpp\n",
+        "#include <iostream>\n",
+        "\n",
+        "int getGrade(int m, int f, int r) {\n",
+        "    int sum = m + f;\n",
+        "    char grade;\n",
+        "    if (m == -1 || f == -1) {\n",
+        "        grade = 'F';\n",
+        "    } else if (80 <= sum) {\n",
+        "        grade = 'A';\n",
+        "    } else if (65 <= sum && sum < 80) {\n",
+        "        grade = 'B';\n",
+        "    } else if (50 <= sum && sum < 65) {\n",
+        "        grade = 'C';\n",
+        "    } else if (30 <= sum && sum < 50) {\n",
+        "        if (50 <= r)\n",
+        "            grade = 'C';\n",
+        "        else\n",
+        "            grade = 'D';\n",
+        "    } else if (sum < 30) {\n",
+        "        grade = 'F';\n",
+        "    }\n",
+        "    return grade;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    int m, f, r;\n",
+        "    while (1) {\n",
+        "        std::cin >> m >> f >> r;\n",
+        "        if (m == -1 && f == -1 && r == -1) break;\n",
+        "        std::cout << getGrade(m, f, r) << \"\\n\";\n",
+        "    }\n",
+        "    return 0;\n",
+        "}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "33s4FHAneLdi"
@@ -2114,6 +2157,40 @@
         "### ITP1_7_B: How many ways?\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a6_VEdWNv5R_"
+      },
+      "source": [
+        "%%writefile howmanyway.cpp\n",
+        "#include <iostream>\n",
+        "\n",
+        "int count(int n, int x) {\n",
+        "    int cnt = 0;\n",
+        "    for (int i = 1; i <= n - 2; i++) {\n",
+        "        for (int j = i + 1; j <= n - 1; j++) {\n",
+        "            for (int k = j + 1; k <= n; k++) {\n",
+        "                if (i + j + k == x) cnt++;\n",
+        "            }\n",
+        "        }\n",
+        "    }\n",
+        "    return cnt;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    int n, x;\n",
+        "    while (1) {\n",
+        "        std::cin >> n >> x;\n",
+        "        if (n == 0 && x == 0) break;\n",
+        "        std::cout << count(n, x) << \"\\n\";\n",
+        "    }\n",
+        "    return 0;\n",
+        "}"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2323,7 +2400,7 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "int main() {\n",
+        "int main(){\n",
         "  int N; cin >> N;\n",
         "  vector<int> A(N);\n",
         "  for (int i = 0; i < N; i++) cin >> A.at(i);\n",
@@ -2332,10 +2409,10 @@
         "  // i : 未ソートの部分列の先頭を示すループ変数\n",
         "  // v : A.at(i) の値を一時的に保存しておくための変数\n",
         "  // j : ソート済み部分列から v を挿入するための位置を探すループ変数\n",
-        "  for (int i = 0; i < N; i++) {\n",
+        "  for (int i = 0; i < N; i++){\n",
         "    int v = A.at(i);\n",
         "    int j = i-1;\n",
-        "    while (j >= 0 && A.at(j) > v) {\n",
+        "    while (j >= 0 && A.at(j) > v){\n",
         "      A.at(j+1) = A.at(j);\n",
         "      j--;\n",
         "    }\n",
