--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMpqrtIyxyCJw+qqAkcMwPK",
+      "authorship_tag": "ABX9TyOKx5drOVjMu5cOqAUa/9ed",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2089,15 +2089,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4wEycqpE59ny"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "GPZkGO9veKYa"
       },
       "source": [
@@ -2112,16 +2103,25 @@
         "$m$、$f$、の合計点数が 65 以上 80 未満ならば成績は B。  \n",
         "$m$、$f$、の合計点数が 50 以上 65 未満ならば成績は C。  \n",
         "$m$、$f$、の合計点数が 30 以上 50 未満ならば成績は D。 ただし、$r$ の点数が 50 以上ならば成績は C。  \n",
-        "$r$の合計点数が 30 未満ならば成績は F。  \n"
+        "$r$の合計点数が 30 未満ならば成績は F。  \n",
+        "\n",
+        "例: 40 42 -1 20 30 -1 0 2 -1 -1 -1 -1 =>  \n",
+        "A  \n",
+        "C  \n",
+        "F  \n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bsl-1ynNxq1Y"
+        "id": "bsl-1ynNxq1Y",
+        "outputId": "63f97886-efe5-40c1-a5b4-2fff94aed7b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "// %%writefile grading.cpp\n",
+        "%%writefile grading.cpp\n",
         "#include <iostream>\n",
         "\n",
         "int getGrade(int m, int f, int r) {\n",
@@ -2151,13 +2151,46 @@
         "    while (1) {\n",
         "        std::cin >> m >> f >> r;\n",
         "        if (m == -1 && f == -1 && r == -1) break;\n",
-        "        std::cout << getGrade(m, f, r) << \"\\n\";\n",
+        "        std::cout << (char)getGrade(m, f, r) << \"\\n\";\n",
         "    }\n",
         "    return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting grading.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uxEpwakkXVJ3",
+        "outputId": "7a255ac9-5293-483f-dd19-b94d62ab5859",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ grading.cpp -o grading; echo 40 42 -1 20 30 -1 0 2 -1 -1 -1 -1 |./grading"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "A\n",
+            "C\n",
+            "F\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2181,7 +2214,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "a6_VEdWNv5R_"
+        "id": "a6_VEdWNv5R_",
+        "outputId": "2ef592ff-fc29-4346-df98-ab6e0204f43f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile howmanyway.cpp\n",
@@ -2209,8 +2246,39 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing howmanyway.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uTG1hHh5ZFne",
+        "outputId": "530b66c8-be11-40c8-ec83-5b350bb43732",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ howmanyway.cpp -o howmanyway; echo 5 9 0 0 |./howmanyway"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2232,7 +2300,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K2YWIaeZFAzf"
+        "id": "K2YWIaeZFAzf",
+        "outputId": "216329be-9f1f-4309-e5a4-44ac9911079e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile spreadsheet.cpp\n",
@@ -2254,10 +2326,10 @@
         "        }\n",
         "    }\n",
         "\n",
-        "    for (int i = 0; i < r; i++) {\n",
-        "        for (int j = 0; j < c; j++) {\n",
+        "    for (int i = 0; i <= r; i++) {\n",
+        "        for (int j = 0; j <= c; j++) {\n",
         "            if (j) std::cout << \" \";\n",
-        "            std::count << T[i][j];\n",
+        "            std::cout << T[i][j];\n",
         "        }\n",
         "        std::cout << \"\\n\";\n",
         "    }\n",
@@ -2265,8 +2337,43 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting spreadsheet.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-lAYLgjXZQZK",
+        "outputId": "f555a113-0736-4c29-a7c3-0bb89c210b04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ spreadsheet.cpp -o spreadsheet; echo 4 5 1 1 3 4 5 2 2 2 4 5 3 3 0 1 1 2 3 4 4 6 |./spreadsheet"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 1 3 4 5 14\n",
+            "2 2 2 4 5 15\n",
+            "3 3 0 1 1 8\n",
+            "2 3 4 4 6 19\n",
+            "8 9 9 13 17 56\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2275,16 +2382,29 @@
       },
       "source": [
         "### ITP1_7_D: Matrix Multiplication\n",
-        "\n"
+        "$n \\times m$ の行列 $A$ と $m \\times l$ の行列 $B$ を入力し、それらの積である $n \\times l$ の行列 $C$ を出力する。\n",
+        "$$\n",
+        "C_{ij} = \\sum_{k=1}^m a_{ik}b_{kj}\n",
+        "$$\n",
+        "最初の行で、$n$、$m$、$l$ が空白区切りで与えられる。\n",
+        "\n",
+        "例: 3 2 3 1 2 0 3 4 5 1 2 1 0 3 2 =>  \n",
+        "1 8 5  \n",
+        "0 9 6  \n",
+        "4 23 14  \n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uvgLLFCAPD0B"
+        "id": "uvgLLFCAPD0B",
+        "outputId": "00bb3887-c4e9-4d15-deaf-05c3fc437013",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "// %%writefile matrixmultiplication.cpp\n",
+        "%%writefile matrixmultiplication.cpp\n",
         "#include <iostream>\n",
         "\n",
         "int main() {\n",
@@ -2309,7 +2429,7 @@
         "    for (int i = 0; i < n; i++) {\n",
         "        for (int j = 0; j < l; j++) {\n",
         "            if (j) std::cout << \" \";\n",
-        "            std::count << C[i][j];\n",
+        "            std::cout << C[i][j];\n",
         "        }\n",
         "        std::cout << \"\\n\";\n",
         "    }\n",
@@ -2317,8 +2437,41 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting matrixmultiplication.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q7oQaqCub0R9",
+        "outputId": "56491bc6-0413-49dd-dd9f-36e1f734aaae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ matrixmultiplication.cpp -o matrixmultiplication; echo 3 2 3 1 2 0 3 4 5 1 2 1 0 3 2 |./matrixmultiplication"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 8 5\n",
+            "0 9 6\n",
+            "4 23 14\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2327,7 +2480,9 @@
       },
       "source": [
         "### ITP1_8_A: Toggling Cases\n",
-        "\n"
+        "文字列の小文字と大文字を入れ替える。\n",
+        "\n",
+        "例: fAIR, LATER, OCCASIONALLY CLOUDY. => Fair, later, occasionally cloudy.\n"
       ]
     },
     {
@@ -2337,7 +2492,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a389c566-7b78-4b8c-a9e8-d572850b4a8e"
+        "outputId": "e79bcce9-b7d8-4427-e9be-f91f63706ea8"
       },
       "source": [
         "%%writefile togglecase.cpp\n",
@@ -2359,7 +2514,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -2377,20 +2532,29 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e79148c5-6a3a-452f-cf1a-c5ad47d5416a"
+        "outputId": "11b77dd3-f07b-4e09-d8b3-143400caa619"
       },
       "source": [
-        "!g++ togglecase.cpp -o togglecase; echo  a b C 5d e f |./togglecase"
+        "!g++ togglecase.cpp -o togglecase; echo fAIR, LATER, OCCASIONALLY CLOUDY.  |./togglecase"
       ],
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "A B c 5D E F\n"
+            "Fair, later, occasionally cloudy.\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WbH0uVjjcveT"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -2414,15 +2578,6 @@
         "6  \n",
         "10  \n",
         "1  "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iGRLQV--xvmU"
-      },
-      "source": [
-        "# 注意!!!!"
       ]
     },
     {
