--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOKx5drOVjMu5cOqAUa/9ed",
+      "authorship_tag": "ABX9TyNlCyNcQBFRl4bxv2Fgirfs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2115,10 +2115,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bsl-1ynNxq1Y",
-        "outputId": "63f97886-efe5-40c1-a5b4-2fff94aed7b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "63f97886-efe5-40c1-a5b4-2fff94aed7b9"
       },
       "source": [
         "%%writefile grading.cpp\n",
@@ -2156,7 +2156,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2171,15 +2171,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "uxEpwakkXVJ3",
-        "outputId": "7a255ac9-5293-483f-dd19-b94d62ab5859",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7a255ac9-5293-483f-dd19-b94d62ab5859"
       },
       "source": [
         "!g++ grading.cpp -o grading; echo 40 42 -1 20 30 -1 0 2 -1 -1 -1 -1 |./grading"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2215,10 +2215,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "a6_VEdWNv5R_",
-        "outputId": "2ef592ff-fc29-4346-df98-ab6e0204f43f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2ef592ff-fc29-4346-df98-ab6e0204f43f"
       },
       "source": [
         "%%writefile howmanyway.cpp\n",
@@ -2246,7 +2246,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2261,15 +2261,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "uTG1hHh5ZFne",
-        "outputId": "530b66c8-be11-40c8-ec83-5b350bb43732",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "530b66c8-be11-40c8-ec83-5b350bb43732"
       },
       "source": [
         "!g++ howmanyway.cpp -o howmanyway; echo 5 9 0 0 |./howmanyway"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2301,10 +2301,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "K2YWIaeZFAzf",
-        "outputId": "216329be-9f1f-4309-e5a4-44ac9911079e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "216329be-9f1f-4309-e5a4-44ac9911079e"
       },
       "source": [
         "%%writefile spreadsheet.cpp\n",
@@ -2337,7 +2337,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2352,15 +2352,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "-lAYLgjXZQZK",
-        "outputId": "f555a113-0736-4c29-a7c3-0bb89c210b04",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f555a113-0736-4c29-a7c3-0bb89c210b04"
       },
       "source": [
         "!g++ spreadsheet.cpp -o spreadsheet; echo 4 5 1 1 3 4 5 2 2 2 4 5 3 3 0 1 1 2 3 4 4 6 |./spreadsheet"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2397,11 +2397,44 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "N3pCUcBnph7Z",
+        "outputId": "894643f5-96a5-45e3-e701-2d60a1ecd5e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        }
+      },
+      "source": [
+        "# 参考\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\n",
+        "C_{ij} = \\sum_{k=1}^m a_{ik}b_{kj}\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\\displaystyle\n\nC_{ij} = \\sum_{k=1}^m a_{ik}b_{kj}",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "uvgLLFCAPD0B",
-        "outputId": "00bb3887-c4e9-4d15-deaf-05c3fc437013",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "00bb3887-c4e9-4d15-deaf-05c3fc437013"
       },
       "source": [
         "%%writefile matrixmultiplication.cpp\n",
@@ -2437,7 +2470,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2452,15 +2485,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Q7oQaqCub0R9",
-        "outputId": "56491bc6-0413-49dd-dd9f-36e1f734aaae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "56491bc6-0413-49dd-dd9f-36e1f734aaae"
       },
       "source": [
         "!g++ matrixmultiplication.cpp -o matrixmultiplication; echo 3 2 3 1 2 0 3 4 5 1 2 1 0 3 2 |./matrixmultiplication"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2514,7 +2547,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2537,7 +2570,7 @@
       "source": [
         "!g++ togglecase.cpp -o togglecase; echo fAIR, LATER, OCCASIONALLY CLOUDY.  |./togglecase"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2551,20 +2584,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WbH0uVjjcveT"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "J5whLVdFePDp"
       },
       "source": [
         "### ITP1_8_B: Sum of Numbers\n",
-        "\n"
+        "与えられた数の各桁の和を計算する。\n"
       ]
     },
     {
@@ -2587,30 +2611,36 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "db1ad352-8102-49bc-8bbe-c30f1ad22362"
+        "outputId": "f6c8423b-615c-4b21-b16c-171f474791bf"
       },
       "source": [
-        "%%writefile sumofnum.cpp\n",
+        "%%writefile sumofnum01.cpp\n",
         "#include <iostream>\n",
         "\n",
-        "int main() {\n",
-        "    std::string str;\n",
-        "    getline(std::cin, str);\n",
+        "int strtosum(std::string str) {\n",
         "    int sum = 0;\n",
-        "\n",
         "    for (int i = 0; i < str.size(); i++) {\n",
         "        sum += (str[i] - '0');\n",
         "    }\n",
-        "    std::cout << sum << \"\\n\";\n",
+        "    return sum;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    std::string str;\n",
+        "    while (1) {\n",
+        "        std::cin >> str;\n",
+        "        if (str[0] == '0') break;\n",
+        "        std::cout << strtosum(str) << \"\\n\";\n",
+        "    }\n",
         "    return 0;\n",
-        "}"
+        "}\n"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Overwriting sumofnum.cpp\n"
+            "Overwriting sumofnum01.cpp\n"
           ],
           "name": "stdout"
         }
@@ -2623,17 +2653,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9f8e54c6-5b1e-467c-e710-36de5aa5d5d5"
+        "outputId": "59d1eed3-23db-4149-dcfd-204e014c1f55"
       },
       "source": [
-        "!g++ sumofnum.cpp -o sumofnum; echo  153 |./sumofnum"
+        "!g++ sumofnum01.cpp -o sumofnum01; echo 123 55 1000 0  |./sumofnum01"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "9\n"
+            "6\n",
+            "10\n",
+            "1\n"
           ],
           "name": "stdout"
         }
@@ -2646,7 +2678,112 @@
       },
       "source": [
         "### ITP1_8_C: Counting Characters\n",
-        "\n"
+        "与えられた英文に含まれる、各アルファベットの数を数える。 小文字と大文字は区別しない。\n",
+        "\n",
+        "例: This is a pen. =>   \n",
+        "a : 1  \n",
+        "b : 0  \n",
+        "c : 0  \n",
+        "d : 0  \n",
+        "e : 1  \n",
+        "f : 0  \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xvA7k-jY82Yf",
+        "outputId": "0722b4a4-89ae-46fd-8e9b-f9b7ee36909a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile countcharacter.cpp\n",
+        "#include <iostream>\n",
+        "\n",
+        "int main (){\n",
+        "    char ch;\n",
+        "    int cnt[26] = {};\n",
+        "    while(std::cin >> ch){\n",
+        "        ch = tolower(ch);\n",
+        "        if (isalpha(ch)){\n",
+        "            cnt[ch-'a']++;\n",
+        "        }\n",
+        "    }\n",
+        "\n",
+        "    for (int i = 0; i < 26; i++){\n",
+        "        std::cout << char(i+'a') << \" \" << cnt[i] << \"\\n\";\n",
+        "    }\n",
+        "    return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting countcharacter.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YDJCURDO82oJ",
+        "outputId": "b86c70ca-6e66-47c7-c4e7-758b360b9f69",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ countcharacter.cpp -o countcharacter; echo This is a pen. |./countcharacter"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a 1\n",
+            "b 0\n",
+            "c 0\n",
+            "d 0\n",
+            "e 1\n",
+            "f 0\n",
+            "g 0\n",
+            "h 1\n",
+            "i 2\n",
+            "j 0\n",
+            "k 0\n",
+            "l 0\n",
+            "m 0\n",
+            "n 1\n",
+            "o 0\n",
+            "p 1\n",
+            "q 0\n",
+            "r 0\n",
+            "s 2\n",
+            "t 1\n",
+            "u 0\n",
+            "v 0\n",
+            "w 0\n",
+            "x 0\n",
+            "y 0\n",
+            "z 0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hbuDfJS4_gq2"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -2658,6 +2795,39 @@
         "### ITP1_8_D: Ring\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ksMyfhEL_oRY"
+      },
+      "source": [
+        "%%writefile ring01.cpp\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5IWeRyEo_q4t"
+      },
+      "source": [
+        "!g++ ring01.cpp -o ring01; echo This is a pen. |./ring01"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JdTymits_n0X"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
