--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN+TFmVhmKR8JGC54fOtaX1",
+      "authorship_tag": "ABX9TyMYrGQj+wF1lCjlI3pe4yhd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2877,27 +2877,76 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "x9FH1UhbfN5K"
+        "id": "x9FH1UhbfN5K",
+        "outputId": "9a3f2cf2-6e02-4dfb-f14b-df90d5705b14",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile findword.cpp\n",
         "#include <iostream>\n",
         "\n",
+        "std::string toUpper(std::string str) {\n",
+        "    for (int i = 0; i < str.size(); i++) str[i] = toupper(str[i]);\n",
+        "    return str;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    std::string target, source;\n",
+        "    std::cin >> target;\n",
+        "    target = toUpper(target);\n",
+        "\n",
+        "    int cnt = 0;\n",
+        "\n",
+        "    while (1) {\n",
+        "        std::cin >> source;\n",
+        "        if (source == \"END_OF_TEXT\") break;\n",
+        "        source = toUpper(source);\n",
+        "        if (target == source) cnt++;\n",
+        "    }\n",
+        "\n",
+        "    std::cout << cnt << \"\\n\";\n",
+        "\n",
+        "    return 0;\n",
+        "}\n",
+        "\n",
+        "\n",
         "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing findword.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AH1PcUKxfNmc"
+        "id": "AH1PcUKxfNmc",
+        "outputId": "837b2fb7-712a-4292-b398-06fd5739e632",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ findword.cpp -o findword; echo computer Nurtures computer scientists and highly-skilled computer engineers who will create and exploit  knowledge  for the new era. Provides an outstanding computer environment. END_OF_TEXT |./findword"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2917,12 +2966,163 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oTCDJiYa8t-B",
+        "outputId": "a986af50-9675-4983-d723-b7166c7f2228",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile shuffle01.cpp\n",
+        "#include <iostream>\n",
+        "\n",
+        "std::string shuffle(std::string str, int h) {\n",
+        "    std::string head = str.substr(0, h);\n",
+        "    std::string tail = str.substr(h, str.size() - 1);\n",
+        "    return tail + head;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    std::string cards;\n",
+        "    int m, h;\n",
+        "\n",
+        "    while (1) {\n",
+        "        std::cin >> cards;\n",
+        "        if (cards == \"-\") break;\n",
+        "        std::cin >> m;\n",
+        "        for (int i = 0; i < m; i++) {\n",
+        "            std::cin >> h;\n",
+        "            cards = shuffle(cards, h);\n",
+        "        }\n",
+        "        std::cout << cards << \"\\n\";\n",
+        "    }\n",
+        "    return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting shuffle01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Whs4PGcs8tzw",
+        "outputId": "b14da4fc-1f7e-44ad-a54b-f5e642eb6844",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ shuffle01.cpp -o shuffle01; echo aabc 3 1 2 1 vwxyz 2 3 4 - |./shuffle01"
+      ],
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "aabc\n",
+            "xyzvw\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WwmbzTU9OULn"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "nLP0EvwueSsx"
       },
       "source": [
-        "### ITP1_9_C: Card Game\n"
+        "### ITP1_9_C: Card Game\n",
+        "このゲームでは、カードに動物の名前が書かれいて、辞書順で大きいものがそのターンの勝者となる。勝者には３ポイント、引き分けの場合にはそれぞれ１ポイントが加算される。ゲーム終了後のそれぞれの得点を出力する。\n",
+        "\n",
+        "例: 3 cat dog fish fish lion tiger =>  1 7\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N7co78aNOZM9",
+        "outputId": "df3c60e3-9715-42d4-a053-e818ba782b02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile cardgame.cpp\n",
+        "#include <iostream>\n",
+        "\n",
+        "int main() {\n",
+        "    int n;\n",
+        "    std::string s1, s2;\n",
+        "    int a = 0, b = 0;\n",
+        "    std::cin >> n;\n",
+        "\n",
+        "    for (int i = 0; i < n; i++) {\n",
+        "        std::cin >> s1 >> s2;\n",
+        "        if (s1 > s2)\n",
+        "            a += 3;\n",
+        "        else if (s1 < s2)\n",
+        "            b += 3;\n",
+        "        else {\n",
+        "            a++;\n",
+        "            b++;\n",
+        "        }\n",
+        "    }\n",
+        "    std::cout << a << \" \" << b << \"\\n\";\n",
+        "    return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting cardgame.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pz1Zj48sOZrp",
+        "outputId": "b61ee270-441a-4d3d-f694-5db153ef7e98",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ cardgame.cpp -o cardgame; echo 3 cat dog fish fish lion tiger |./cardgame"
+      ],
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 7\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -2932,8 +3132,40 @@
       },
       "source": [
         "### ITP1_9_D: Transformation\n",
-        "\n"
+        "文字列 str に対して、与えられた命令の列を実行する。\n",
+        "* print a b: str の a 文字目から b 文字目までを出力する。\n",
+        "* reverse a b: str の a 文字目から b 文字目までを逆順にする。\n",
+        "* replace a b p: str の a 文字目から b 文字目までを p に置き換える。\n",
+        "文字列 str の最初の文字を 0 文字目とする。\n",
+        "\n",
+        "1 行目に文字列 str 、2 行目に命令の数 q 、続く q 行に各命令が上記の形式で与えられる。\n",
+        "\n",
+        "例: abcde 3 replace 1 3 xyz reverse 0 2 print 1 4 =>  xaze\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uENuKTdjRcci"
+      },
+      "source": [
+        "%%writefile transform.cpp\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NMNGyfkXRc-O"
+      },
+      "source": [
+        "!g++ transform.cpp -o transform; echo 3 cat dog fish fish lion tiger |./transform"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
