--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOcqaCwXrQEvbqYBQa51OWL",
+      "authorship_tag": "ABX9TyOK7uTf46jEpM9f3EGiFIZD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3129,10 +3129,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "uENuKTdjRcci",
-        "outputId": "4dd84186-1851-4ef0-a3de-c1d5365101eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4dd84186-1851-4ef0-a3de-c1d5365101eb"
       },
       "source": [
         "%%writefile transform.cpp\n",
@@ -3175,10 +3175,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "NMNGyfkXRc-O",
-        "outputId": "09b85ae6-9f68-4b9d-98a4-60ceb1352d16",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "09b85ae6-9f68-4b9d-98a4-60ceb1352d16"
       },
       "source": [
         "!g++ transform.cpp -o transform; echo abcde 3 replace 1 3 xyz reverse 0 2 print 1 4 |./transform"
@@ -3209,11 +3209,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0S2V-lI2vACx",
-        "outputId": "8708324a-4f4c-4874-a637-119200439617",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0S2V-lI2vACx",
+        "outputId": "8708324a-4f4c-4874-a637-119200439617"
       },
       "source": [
         "%%writefile distancepoint01.cpp\n",
@@ -3245,11 +3245,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EN0IO1sYu_ki",
-        "outputId": "57819bec-00b6-4429-9e5f-6076a51cb945",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EN0IO1sYu_ki",
+        "outputId": "57819bec-00b6-4429-9e5f-6076a51cb945"
       },
       "source": [
         "!g++ distancepoint01.cpp -o distancepoint01; echo 0 0 1 1 |./distancepoint01"
@@ -3292,11 +3292,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QXxxdLhc03Wp",
-        "outputId": "f3b9c3c5-11c5-4a16-f023-6dd918251978",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QXxxdLhc03Wp",
+        "outputId": "f3b9c3c5-11c5-4a16-f023-6dd918251978"
       },
       "source": [
         "%%writefile triangle01.cpp\n",
@@ -3337,11 +3337,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6xW8WDCF03sl",
-        "outputId": "1805f2ca-b6b1-41dc-87df-83e237741ce3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6xW8WDCF03sl",
+        "outputId": "1805f2ca-b6b1-41dc-87df-83e237741ce3"
       },
       "source": [
         "!g++ triangle01.cpp -o triangle01; echo 4 3 90 |./triangle01"
@@ -3383,11 +3383,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AGHplH9Q29dZ",
-        "outputId": "c2b5fde0-31f1-4942-9576-03cdbcd04151",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AGHplH9Q29dZ",
+        "outputId": "c2b5fde0-31f1-4942-9576-03cdbcd04151"
       },
       "source": [
         "%%writefile standarddeviation.cpp\n",
@@ -3432,11 +3432,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9CCdOA9r29Pr",
-        "outputId": "28c89dd9-7434-4740-9503-3829a5696af3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9CCdOA9r29Pr",
+        "outputId": "28c89dd9-7434-4740-9503-3829a5696af3"
       },
       "source": [
         "!g++ standarddeviation.cpp -o standarddeviation; echo 5 70 80 100 90 20 3 80 80 80 0 |./standarddeviation"
@@ -3456,11 +3456,60 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "yBeatSvTQHp4"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "HwCRABjKhP9r"
       },
       "source": [
+        "### ITP1_10_D: Distance II\n",
+        "２つの n 次元ベクトル $x=\\{x_1,x_2, \\dots , x_n\\}$ と $y=\\{y_1,y_2, \\dots , y_n\\}$ の距離を計算する。\n",
         "\n",
-        "### ITP1_10_D: Distance II\n"
+        "ミンコフスキー距離(Minkowski's distance)は次の式で表される。\n",
+        "\n",
+        "$$\n",
+        "D_{xy} = ( \\sum^n_{i=1}|x_i - y_i|^p )^{\\frac1p}\n",
+        "$$\n",
+        "\n",
+        "$p=1$ のとき\n",
+        "\n",
+        "$$\n",
+        "D_{xy} = |x_1 - y_1|+|x_2 - y_2|+ \\dots +|x_n - y_n|\n",
+        "$$\n",
+        "\n",
+        "となり、マンハッタン距離と呼ばれる。\n",
+        "\n",
+        "$p=2$ のとき\n",
+        "\n",
+        "$$\n",
+        "D_{xy} = \\sqrt {(|x_1 - y_1|)^2+(|x_2 - y_2|)^2+ \\dots +(|x_n - y_n|)^2}\n",
+        "$$\n",
+        "\n",
+        "となり、これは一般的に使われるユークリッド距離になる。\n",
+        "\n",
+        "$p=\\infty$ のとき\n",
+        "\n",
+        "$$\n",
+        "D_{xy} = max^n_{i=1}(|x_i - y_i|)\n",
+        "$$\n",
+        "\n",
+        "となり、チェビシェフ距離と呼ばれる。\n",
+        "\n",
+        "$p$ がそれぞれ 1、2、3、$\\infty$ のミンコフスキー距離を求める。\n",
+        "\n",
+        "例: 3 1 2 3 2 0 4 =>  \n",
+        "4.000000  \n",
+        "2.449490  \n",
+        "2.154435  \n",
+        "2.000000  \n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -3469,8 +3518,7 @@
         "id": "NoN0066LhR2i"
       },
       "source": [
-        "### ITP1_11_A: Dice I\n",
-        "\n"
+        "### ITP1_11_A: Dice I\n"
       ]
     },
     {
