Colaboratory を使用して作成しました

--- a/functionaljs01.ipynb
+++ b/functionaljs01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "functionaljs01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPgzuiupXAatZTQzK5Gx5kn",
+      "authorship_tag": "ABX9TyOxxC6JPSo+ohmQ8f8dXQm2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,6 +58,30 @@
         "%%script python3 とか %%python3はオッケーみたい。\n",
         "\n",
         "2020-12-24 05:49:36 => とりあえず読むために云々。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VxkFqTe_ZDyQ",
+        "outputId": "631b76d4-ffc0-4a13-848f-5aa95adf34c4"
+      },
+      "source": [
+        "%%script node\n",
+        "console.log(\"he\")"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "he\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
