Colaboratory を使用して作成しました

--- a/learnjavascript.ipynb
+++ b/learnjavascript.ipynb
@@ -6,7 +6,7 @@
       "name": "learnjs.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPtXoOWJ8WdjgCfaqgB8XyB",
+      "authorship_tag": "ABX9TyPtewmdNEZmCWkdAuEs64Zc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 84
         },
-        "outputId": "58f9f815-7f0c-4598-a460-e2b6f6084bbb"
+        "outputId": "2f1d16be-3bca-4211-b50f-d19647324a5e"
       },
       "source": [
         "%%javascript\n",
@@ -62,7 +62,7 @@
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"二行目\"));"
       ],
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "display_data",
@@ -101,16 +101,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "105d9a2d-26a9-46d8-b1ee-1f1b430dbbcd"
+        "outputId": "d873e551-9472-47de-8839-39d43285497b"
       },
       "source": [
         "%%script node\n",
         "console.log(\"hello node\");\n",
-        "console.log('二行書いたら\\nどうなるか');\n",
+        "console.log(\"二行書いたら\\nどうなるか\");\n",
         "console.log(\"\\n\");\n",
         "console.log(\"二行目\");"
       ],
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +132,9 @@
         "id": "QKc4eZ57kb5u"
       },
       "source": [
-        "とりあえずこちらの方が簡単だね。 やりながら考えよう。"
+        "とりあえずこちらの方が簡単だね。 やりながら考えよう。\n",
+        "\n",
+        "console.log() は出力に改行を自動でつける。"
       ]
     },
     {
@@ -186,18 +188,27 @@
       "source": [
         "使えた。Python や Ruby の `#` ではなくて、C++ や Java の `//` なのだ。覚えよう。\n",
         "\n",
-        "console.log() は出力に改行を自動でつける。\n"
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5ncnkxVIAyOv"
+      },
+      "source": [
+        "%%javascript でもおなじコメントが使えるかおどうか実験してみる。"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "nZnhAD0PwU7C",
-        "outputId": "edf0b1bf-8042-440f-fc53-d824903eb974",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
-        }
+        },
+        "outputId": "edf0b1bf-8042-440f-fc53-d824903eb974"
       },
       "source": [
         "# 実験\n",
@@ -214,7 +225,7 @@
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"二行目\"));"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -272,6 +283,15 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fPBOPCSfBGSh"
+      },
+      "source": [
+        "%%html で、style も使える。"
       ]
     },
     {
@@ -337,6 +357,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e6HEJ9baBK5A"
+      },
+      "source": [
+        "更に <script> も使える。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "E9v4HzqBP_Gn",
@@ -379,7 +408,7 @@
         "}\n",
         "</script>"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -432,9 +461,9 @@
         "id": "hAtAaQMljq4Q"
       },
       "source": [
-        "この例では javascript の ```  let name = prompt('名前を入力して下さい');``` が機能しないが、あたかも機能したかのようにボタンをクリックすると、\"PLAYER 1: CHRIS\" が \"PLAYER 1: NULL\" に変わる。\n",
+        "この例では javascript の ```  let name = prompt('名前を入力して下さい');``` が機能しないが、ボタンをクリックすると、\"PLAYER 1: CHRIS\" が \"PLAYER 1: NULL\" に変わる。\n",
         "\n",
-        "name 変数を変えると反映された。"
+        "コメントアウトして、name 変数を変えると反映された。"
       ]
     },
     {
@@ -443,18 +472,18 @@
         "id": "xXQcRh5eynZV"
       },
       "source": [
-        "次の例はそのままでは動かないので実験してみる。"
+        "次の例はそのままでは動かない。"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "qd0yonzppby9",
-        "outputId": "537d1851-a4a7-44cd-9dcd-ffc4892b7657",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 39
-        }
+        },
+        "outputId": "7a12219f-b70b-474e-99a0-683044812905"
       },
       "source": [
         "%%html\n",
@@ -476,7 +505,7 @@
         "    });\n",
         "</script>"
       ],
-      "execution_count": 42,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "display_data",
@@ -514,11 +543,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "KvaEorvCytE-",
-        "outputId": "d6ad40d9-0b4d-47d4-d458-e5cb4e51d8c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 56
-        }
+        },
+        "outputId": "d6ad40d9-0b4d-47d4-d458-e5cb4e51d8c4"
       },
       "source": [
         "# Player 1 を参考に実験\n",
@@ -533,7 +562,7 @@
         "    }\n",
         "</script>"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -563,11 +592,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ydyDKIeE1s2h",
-        "outputId": "eea08eba-962c-4725-abd4-3ad037a29ff0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 114
-        }
+          "height": 68
+        },
+        "outputId": "7178ad35-35e0-4198-e1d1-8d88aa416423"
       },
       "source": [
         "# 実験\n",
@@ -588,7 +617,7 @@
         "    }\n",
         "</script>"
       ],
-      "execution_count": 43,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "display_data",
@@ -628,10 +657,83 @@
       "source": [
         "オッケー!!!! 動いたね!!!!\n",
         "```\n",
-        "document.addEventListener(\"DOMContentLoaded\", function () {\n",
-        "    });\n",
+        "document.addEventListener(\"DOMContentLoaded\", function() {\n",
+        "  ...\n",
+        "});\n",
         "```\n",
-        "が使えないだけみたい。 工夫しよう。"
+        "が使えないだけみたい。\n",
+        "\n",
+        "これは、htmlのbodyが完全に読み込まれてから発動するよ!!!!ということらしくて、たぶん colab の環境では"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y9edSb5vDeYw"
+      },
+      "source": [
+        "# インライン javascript"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YPFzrAQgDhyc",
+        "outputId": "287b422f-e0ce-479e-84ab-dbc3955fe97d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<button onclick=\"createParagraph()\">押してください</button>\n",
+        "\n",
+        "<script>\n",
+        "function createParagraph() {\n",
+        "  let para = document.createElement('p');\n",
+        "  para.textContent = 'ボタンが押されました！';\n",
+        "  document.body.appendChild(para);\n",
+        "}\n",
+        "</script>\n"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<button onclick=\"createParagraph()\">押してください</button>\n",
+              "\n",
+              "<script>\n",
+              "function createParagraph() {\n",
+              "  let para = document.createElement('p');\n",
+              "  para.textContent = 'ボタンが押されました！';\n",
+              "  document.body.appendChild(para);\n",
+              "}\n",
+              "</script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZtYl_cM7EIKG"
+      },
+      "source": [
+        "このようにインラインにjavascriptを書くことができるが、やってはいけないとのこと。\n",
+        "\n",
+        "なぜならば、\n",
+        "1. html が汚れる。\n",
+        "1. 属性をそれぞれのボタンに書くのは効率が悪い。"
       ]
     },
     {
