--- a/learnjavascript.ipynb
+++ b/learnjavascript.ipynb
@@ -6,7 +6,7 @@
       "name": "learnjs.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPtewmdNEZmCWkdAuEs64Zc",
+      "authorship_tag": "ABX9TyN62cRGx5AbIjxFSOttLtcj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -663,7 +663,16 @@
         "```\n",
         "が使えないだけみたい。\n",
         "\n",
-        "これは、htmlのbodyが完全に読み込まれてから発動するよ!!!!ということらしくて、たぶん colab の環境では"
+        "これは、htmlのbodyが完全に読み込まれてから発動するよ!!!!ということらしくて、たぶん colab の環境では意味がないのだろう。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lXOD5W6_PgzV"
+      },
+      "source": [
+        "外部から読み込む場合は、`<script src=\"script.js\" defer></script>`という風に`defer`をつけてhtmlの読み込みとの同期をとる。  内部にスクリプトを書くときだけの問題、とのこと。"
       ]
     },
     {
@@ -678,12 +687,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YPFzrAQgDhyc",
-        "outputId": "287b422f-e0ce-479e-84ab-dbc3955fe97d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
-        }
+        },
+        "id": "YPFzrAQgDhyc",
+        "outputId": "287b422f-e0ce-479e-84ab-dbc3955fe97d"
       },
       "source": [
         "%%html\n",
@@ -733,7 +742,20 @@
         "\n",
         "なぜならば、\n",
         "1. html が汚れる。\n",
-        "1. 属性をそれぞれのボタンに書くのは効率が悪い。"
+        "1. 属性をそれぞれのボタンに書くのは効率が悪い。\n",
+        "\n",
+        "スクリプト側でbuttonにaddEventListener('click', createParagraph);とするように、とのこと。\n",
+        "\n",
+        "なるほどね。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "S60qQnzBREen"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
