Colaboratory を使用して作成しました

--- a/learnjavascript.ipynb
+++ b/learnjavascript.ipynb
@@ -6,7 +6,7 @@
       "name": "learnjs.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN62cRGx5AbIjxFSOttLtcj",
+      "authorship_tag": "ABX9TyO7fqOO37wSFil5ZXLv5Vwi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"二行目\"));"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -110,7 +110,7 @@
         "console.log(\"\\n\");\n",
         "console.log(\"二行目\");"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,7 +505,7 @@
         "    });\n",
         "</script>"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -617,7 +617,7 @@
         "    }\n",
         "</script>"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -672,7 +672,7 @@
         "id": "lXOD5W6_PgzV"
       },
       "source": [
-        "外部から読み込む場合は、`<script src=\"script.js\" defer></script>`という風に`defer`をつけてhtmlの読み込みとの同期をとる。  内部にスクリプトを書くときだけの問題、とのこと。"
+        "外部から読み込む場合は、`<script src=\"script.js\" defer></script>`という風に`defer`をつけてhtmlの読み込みとの同期をとる。  内部にスクリプトを書くときだけの問題、とのこと。 読み込む順序が問題でなく、早く読み込むためには async というオプションもある。"
       ]
     },
     {
@@ -706,7 +706,7 @@
         "}\n",
         "</script>\n"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -764,9 +764,257 @@
         "id": "bidrpOZ48BaV"
       },
       "source": [
-        "# 数あてゲーム\n",
+        "# 数あてゲーム\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vzKFQ42CfjM0",
+        "outputId": "1a6a16c8-150a-4c4c-d8c4-7185fd54ccca",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 219
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<style>\n",
+        "    html {\n",
+        "        font-family: sans-serif;\n",
+        "    }\n",
         "\n",
-        "次の例が数当てゲームだが、ユーザーとのやりとりはやりたくないので、ゲームとして完成させることはあきらめて、部分部分を見ていこう。関数とか。ランダムの使い方、とか。"
+        "    body {\n",
+        "        width: 50%;\n",
+        "        max-width: 800px;\n",
+        "        min-width: 480px;\n",
+        "        margin: 0 auto;\n",
+        "    }\n",
+        "\n",
+        "    .lastResult {\n",
+        "        color: white;\n",
+        "        padding: 3px;\n",
+        "    }\n",
+        "</style>\n",
+        "\n",
+        "<body>\n",
+        "    <h1>Number guessing game</h1>\n",
+        "\n",
+        "    <p>数あてゲームです。 1から100までの数を当ててください。 10回トライできます。 予想が大きすぎるか、小さすぎるかを答えます。\n",
+        "\n",
+        "</p>\n",
+        "\n",
+        "    <div class=\"form\">\n",
+        "        <label for=\"guessField\">予想を入れてください: </label>\n",
+        "        <input type=\"text\" id=\"guessField\" class=\"guessField\">\n",
+        "        <input type=\"submit\" value=\"入力\" class=\"guessSubmit\">\n",
+        "    </div>\n",
+        "\n",
+        "    <div class=\"resultParas\">\n",
+        "        <p class=\"guesses\"></p>\n",
+        "        <p class=\"lastResult\"></p>\n",
+        "        <p class=\"lowOrHi\"></p>\n",
+        "    </div>\n",
+        "\n",
+        "    <script>\n",
+        "\n",
+        "        let randomNumber = Math.floor(Math.random() * 100) + 1;\n",
+        "\n",
+        "        const guesses = document.querySelector('.guesses');\n",
+        "        const lastResult = document.querySelector('.lastResult');\n",
+        "        const lowOrHi = document.querySelector('.lowOrHi');\n",
+        "\n",
+        "        const guessSubmit = document.querySelector('.guessSubmit');\n",
+        "        const guessField = document.querySelector('.guessField');\n",
+        "\n",
+        "        let guessCount = 1;\n",
+        "        let resetButton;\n",
+        "\n",
+        "        function checkGuess() {\n",
+        "            let userGuess = Number(guessField.value);\n",
+        "            if (guessCount === 1) {\n",
+        "                guesses.textContent = '前回の予想: ';\n",
+        "            }\n",
+        "            guesses.textContent += userGuess + ' ';\n",
+        "\n",
+        "            if (userGuess === randomNumber) {\n",
+        "                lastResult.textContent = 'おめでとう! 正解です!';\n",
+        "                lastResult.style.backgroundColor = 'green';\n",
+        "                lowOrHi.textContent = '';\n",
+        "                setGameOver();\n",
+        "            } else if (guessCount === 10) {\n",
+        "                lastResult.textContent = '!!!ゲームオーバー!!!';\n",
+        "                setGameOver();\n",
+        "            } else {\n",
+        "                lastResult.textContent = '間違いです!';\n",
+        "                lastResult.style.backgroundColor = 'red';\n",
+        "                if (userGuess < randomNumber) {\n",
+        "                    lowOrHi.textContent = '今の予想は小さすぎです!';\n",
+        "                } else if (userGuess > randomNumber) {\n",
+        "                    lowOrHi.textContent = '今の予想は大きすぎです!';\n",
+        "                }\n",
+        "            }\n",
+        "            guessCount++;\n",
+        "            guessField.value = '';\n",
+        "            guessField.focus();\n",
+        "        }\n",
+        "        guessSubmit.addEventListener('click', checkGuess);\n",
+        "\n",
+        "        function setGameOver() {\n",
+        "            guessField.disabled = true;\n",
+        "            guessSubmit.disabled = true;\n",
+        "            resetButton = document.createElement('button');\n",
+        "            resetButton.textContent = '新しいゲームを始める';\n",
+        "            document.body.appendChild(resetButton);\n",
+        "            resetButton.addEventListener('click', resetGame);\n",
+        "        }\n",
+        "        function resetGame() {\n",
+        "            guessCount = 1;\n",
+        "\n",
+        "            const resetParas = document.querySelectorAll('.resultParas p');\n",
+        "            for (let i = 0; i < resetParas.length; i++) {\n",
+        "                resetParas[i].textContent = '';\n",
+        "            }\n",
+        "\n",
+        "            resetButton.parentNode.removeChild(resetButton);\n",
+        "\n",
+        "            guessField.disabled = false;\n",
+        "            guessSubmit.disabled = false;\n",
+        "            guessField.value = '';\n",
+        "            guessField.focus();\n",
+        "\n",
+        "            lastResult.style.backgroundColor = 'white';\n",
+        "\n",
+        "            randomNumber = Math.floor(Math.random() * 100) + 1;\n",
+        "        }\n",
+        "    </script>\n",
+        "</body>"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    html {\n",
+              "        font-family: sans-serif;\n",
+              "    }\n",
+              "\n",
+              "    body {\n",
+              "        width: 50%;\n",
+              "        max-width: 800px;\n",
+              "        min-width: 480px;\n",
+              "        margin: 0 auto;\n",
+              "    }\n",
+              "\n",
+              "    .lastResult {\n",
+              "        color: white;\n",
+              "        padding: 3px;\n",
+              "    }\n",
+              "</style>\n",
+              "\n",
+              "<body>\n",
+              "    <h1>Number guessing game</h1>\n",
+              "\n",
+              "    <p>数あてゲームです。 1から100までの数を当ててください。 10回トライできます。 予想が大きすぎるか、小さすぎるかを答えます。\n",
+              "\n",
+              "</p>\n",
+              "\n",
+              "    <div class=\"form\">\n",
+              "        <label for=\"guessField\">予想を入れてください: </label>\n",
+              "        <input type=\"text\" id=\"guessField\" class=\"guessField\">\n",
+              "        <input type=\"submit\" value=\"入力\" class=\"guessSubmit\">\n",
+              "    </div>\n",
+              "\n",
+              "    <div class=\"resultParas\">\n",
+              "        <p class=\"guesses\"></p>\n",
+              "        <p class=\"lastResult\"></p>\n",
+              "        <p class=\"lowOrHi\"></p>\n",
+              "    </div>\n",
+              "\n",
+              "    <script>\n",
+              "\n",
+              "        let randomNumber = Math.floor(Math.random() * 100) + 1;\n",
+              "\n",
+              "        const guesses = document.querySelector('.guesses');\n",
+              "        const lastResult = document.querySelector('.lastResult');\n",
+              "        const lowOrHi = document.querySelector('.lowOrHi');\n",
+              "\n",
+              "        const guessSubmit = document.querySelector('.guessSubmit');\n",
+              "        const guessField = document.querySelector('.guessField');\n",
+              "\n",
+              "        let guessCount = 1;\n",
+              "        let resetButton;\n",
+              "\n",
+              "        function checkGuess() {\n",
+              "            let userGuess = Number(guessField.value);\n",
+              "            if (guessCount === 1) {\n",
+              "                guesses.textContent = '前回の予想: ';\n",
+              "            }\n",
+              "            guesses.textContent += userGuess + ' ';\n",
+              "\n",
+              "            if (userGuess === randomNumber) {\n",
+              "                lastResult.textContent = 'おめでとう! 正解です!';\n",
+              "                lastResult.style.backgroundColor = 'green';\n",
+              "                lowOrHi.textContent = '';\n",
+              "                setGameOver();\n",
+              "            } else if (guessCount === 10) {\n",
+              "                lastResult.textContent = '!!!ゲームオーバー!!!';\n",
+              "                setGameOver();\n",
+              "            } else {\n",
+              "                lastResult.textContent = '間違いです!';\n",
+              "                lastResult.style.backgroundColor = 'red';\n",
+              "                if (userGuess < randomNumber) {\n",
+              "                    lowOrHi.textContent = '今の予想は小さすぎです!';\n",
+              "                } else if (userGuess > randomNumber) {\n",
+              "                    lowOrHi.textContent = '今の予想は大きすぎです!';\n",
+              "                }\n",
+              "            }\n",
+              "            guessCount++;\n",
+              "            guessField.value = '';\n",
+              "            guessField.focus();\n",
+              "        }\n",
+              "        guessSubmit.addEventListener('click', checkGuess);\n",
+              "\n",
+              "        function setGameOver() {\n",
+              "            guessField.disabled = true;\n",
+              "            guessSubmit.disabled = true;\n",
+              "            resetButton = document.createElement('button');\n",
+              "            resetButton.textContent = '新しいゲームを始める';\n",
+              "            document.body.appendChild(resetButton);\n",
+              "            resetButton.addEventListener('click', resetGame);\n",
+              "        }\n",
+              "        function resetGame() {\n",
+              "            guessCount = 1;\n",
+              "\n",
+              "            const resetParas = document.querySelectorAll('.resultParas p');\n",
+              "            for (let i = 0; i < resetParas.length; i++) {\n",
+              "                resetParas[i].textContent = '';\n",
+              "            }\n",
+              "\n",
+              "            resetButton.parentNode.removeChild(resetButton);\n",
+              "\n",
+              "            guessField.disabled = false;\n",
+              "            guessSubmit.disabled = false;\n",
+              "            guessField.value = '';\n",
+              "            guessField.focus();\n",
+              "\n",
+              "            lastResult.style.backgroundColor = 'white';\n",
+              "\n",
+              "            randomNumber = Math.floor(Math.random() * 100) + 1;\n",
+              "        }\n",
+              "    </script>\n",
+              "</body>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
@@ -794,15 +1042,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xB6QIBcnlt65"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
